[gd_scene load_steps=52 format=2]

[ext_resource path="res://Assets/Hope/wait/hope0001.png" type="Texture" id=1]
[ext_resource path="res://Assets/Hope/run/hope0003.png" type="Texture" id=2]
[ext_resource path="res://Assets/Hope/run/hope0004.png" type="Texture" id=3]
[ext_resource path="res://Assets/Hope/punchBeta/enemyPunchB0013.png" type="Texture" id=4]
[ext_resource path="res://Hope.gd" type="Script" id=5]
[ext_resource path="res://Assets/Hope/punchBeta/enemyPunchB0014.png" type="Texture" id=6]
[ext_resource path="res://Assets/Hope/wait/hope0002.png" type="Texture" id=7]
[ext_resource path="res://Assets/Hope/punchAlfa/hopePunchAlfa0006.png" type="Texture" id=8]
[ext_resource path="res://Assets/Hope/punchBeta/enemyPunchB0016.png" type="Texture" id=9]
[ext_resource path="res://Assets/Hope/punchBeta/enemyPunchB0015.png" type="Texture" id=10]
[ext_resource path="res://Assets/Hope/punchBeta/enemyPunchB0017.png" type="Texture" id=11]
[ext_resource path="res://Assets/Hope/punchBeta/enemyPunchB0018.png" type="Texture" id=12]
[ext_resource path="res://Assets/Hope/punchBeta/enemyPunchB0019.png" type="Texture" id=13]
[ext_resource path="res://Assets/Hope/punchAlfa/hopePunchAlfa0010.png" type="Texture" id=14]
[ext_resource path="res://Assets/Hope/air/hope0005.png" type="Texture" id=15]
[ext_resource path="res://Assets/Hope/punchAlfa/hopePunchAlfa0008.png" type="Texture" id=16]
[ext_resource path="res://Assets/Hope/punchAlfa/hopePunchAlfa0007.png" type="Texture" id=17]
[ext_resource path="res://Assets/Hope/punchAlfa/hopePunchAlfa0009.png" type="Texture" id=18]
[ext_resource path="res://Assets/Hope/punchAlfa/hopePunchAlfa0012.png" type="Texture" id=19]
[ext_resource path="res://Assets/Hope/punchAlfa/hopePunchAlfa0011.png" type="Texture" id=20]
[ext_resource path="res://Assets/Hope/hopeDash/HopeDash0021.png" type="Texture" id=21]
[ext_resource path="res://Assets/Hope/hopeDash/HopeDash0020.png" type="Texture" id=22]
[ext_resource path="res://Interface.tscn" type="PackedScene" id=23]
[ext_resource path="res://Assets/Hope/HopeUpperA/HopeUpper0022.png" type="Texture" id=24]
[ext_resource path="res://Assets/Hope/HopeUpperA/HopeUpper0025.png" type="Texture" id=25]
[ext_resource path="res://Assets/Hope/HopeUpperA/HopeUpper0026.png" type="Texture" id=26]
[ext_resource path="res://Assets/Hope/HopeUpperA/HopeUpper0023.png" type="Texture" id=27]
[ext_resource path="res://Assets/Hope/HopeUpperA/HopeUpper0027.png" type="Texture" id=28]
[ext_resource path="res://Assets/Hope/HopeUpperA/HopeUpper0028.png" type="Texture" id=29]
[ext_resource path="res://Assets/Hope/HopeUpperA/HopeUpper0024.png" type="Texture" id=30]
[ext_resource path="res://Assets/Hope/HopeUpperB/HopeUpperB0033.png" type="Texture" id=31]
[ext_resource path="res://Assets/Hope/HopeUpperB/HopeUpperB0035.png" type="Texture" id=32]
[ext_resource path="res://Assets/Hope/HopeUpperB/HopeUpperB0032.png" type="Texture" id=33]
[ext_resource path="res://Assets/Hope/HopeUpperB/HopeUpperB0029.png" type="Texture" id=34]
[ext_resource path="res://Assets/Hope/HopeUpperB/HopeUpperB0030.png" type="Texture" id=35]
[ext_resource path="res://Assets/Hope/HopeUpperB/HopeUpperB0034.png" type="Texture" id=36]
[ext_resource path="res://Assets/Hope/HopeUpperB/HopeUpperB0031.png" type="Texture" id=37]
[ext_resource path="res://Assets/Hope/hopeGameOver/hopeGameOver0039.png" type="Texture" id=38]
[ext_resource path="res://Assets/Hope/hopeGameOver/hopeGameOver0038.png" type="Texture" id=39]
[ext_resource path="res://Assets/Hope/hopeGameOver/hopeGameOver0037.png" type="Texture" id=40]
[ext_resource path="res://Assets/Hope/hopeGameOver/hopeGameOver0041.png" type="Texture" id=41]
[ext_resource path="res://Assets/Hope/hopeGameOver/hopeGameOver0035.png" type="Texture" id=42]
[ext_resource path="res://Assets/Hope/hopeGameOver/hopeGameOver0040.png" type="Texture" id=43]
[ext_resource path="res://Assets/Hope/hopeGameOver/hopeGameOver0036.png" type="Texture" id=44]
[ext_resource path="res://Assets/audio efects/footsteps.ogg" type="AudioStream" id=45]
[ext_resource path="res://Assets/audio efects/hurker.wav" type="AudioStream" id=46]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 7 ) ],
"loop": true,
"name": "wait",
"speed": 2.2
}, {
"frames": [ ExtResource( 24 ), ExtResource( 27 ), ExtResource( 30 ), ExtResource( 26 ), ExtResource( 25 ), ExtResource( 28 ), ExtResource( 29 ) ],
"loop": true,
"name": "UpperA",
"speed": 21.0
}, {
"frames": [ ExtResource( 42 ), ExtResource( 44 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 39 ), ExtResource( 38 ), ExtResource( 43 ) ],
"loop": true,
"name": "gameOver",
"speed": 7.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "punchB",
"speed": 21.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 18 ), ExtResource( 14 ), ExtResource( 20 ), ExtResource( 19 ) ],
"loop": true,
"name": "punchA",
"speed": 21.0
}, {
"frames": [ ExtResource( 34 ), ExtResource( 35 ), ExtResource( 37 ), ExtResource( 33 ), ExtResource( 31 ), ExtResource( 36 ), ExtResource( 32 ) ],
"loop": true,
"name": "UpperB",
"speed": 21.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "air",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ) ],
"loop": true,
"name": "dashA",
"speed": 14.0
}, {
"frames": [ ExtResource( 22 ) ],
"loop": true,
"name": "dashB",
"speed": 14.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "run",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11.9482, 27.3943 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 9.9613, 9.76799 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 7.84105, 10.75 )

[sub_resource type="ParticlesMaterial" id=5]
lifetime_randomness = 1.0
emission_shape = 2
emission_box_extents = Vector3( 4, 4, 1 )
flag_disable_z = true
direction = Vector3( 1, 1, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 56.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 14.0
scale = 7.0
scale_random = 0.5
color = Color( 1, 0.94902, 0.133333, 1 )

[node name="Hope" type="KinematicBody2D"]
position = Vector2( 22.0878, -52.0662 )
collision_mask = 40
script = ExtResource( 5 )

[node name="HopeSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "wait"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="punchA" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="punchShape" type="CollisionShape2D" parent="punchA"]
position = Vector2( 24.0693, 0 )
shape = SubResource( 3 )

[node name="punchB" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="punchShape" type="CollisionShape2D" parent="punchB"]
position = Vector2( -24.0688, 0 )
shape = SubResource( 3 )

[node name="UpperA" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="UpperShade" type="CollisionShape2D" parent="UpperA"]
position = Vector2( 22.0878, -13.0602 )
shape = SubResource( 4 )

[node name="UpperB" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="UpperShade" type="CollisionShape2D" parent="UpperB"]
position = Vector2( -22.0033, -13.0602 )
shape = SubResource( 4 )

[node name="timerDashA" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="timerDashB" type="Timer" parent="."]

[node name="HUD" parent="." instance=ExtResource( 23 )]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 1, 0 )
current = true
limit_left = -100
limit_bottom = 1000
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 0.1
drag_margin_right = 0.1

[node name="ParticlesHit" type="Particles2D" parent="."]
visible = false
position = Vector2( 1, 0 )
amount = 49
lifetime = 0.7
process_material = SubResource( 5 )

[node name="timerHit" type="Timer" parent="."]
wait_time = 0.5

[node name="hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 46 )
volume_db = 2.447
attenuation = 0.840896

[node name="jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 45 )
volume_db = -8.564

[connection signal="animation_finished" from="HopeSprite" to="." method="_on_HopeSprite_animation_finished"]
[connection signal="body_entered" from="punchA" to="." method="_on_punchA_body_entered"]
[connection signal="body_entered" from="punchB" to="." method="_on_punchB_body_entered"]
[connection signal="body_entered" from="UpperA" to="." method="_on_UpperA_body_entered"]
[connection signal="body_entered" from="UpperB" to="." method="_on_UpperB_body_entered"]
[connection signal="timeout" from="timerHit" to="." method="_on_timerHit_timeout"]
